# wsctrl

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  ext.rs  main.rs  workspace_management.rs  workspace_manager.rs  workspace_protocol_cosmic_v1.rs  workspace_protocol_ext_v0.rs  workspace_protocol_ext_v1.rs  workspace_state.rs
